# lava

./: .gitignore  AUDIT.md  Cargo.toml  PKGBUILD  PLAN.md  PROMPT_klwp_linux.md  README.md  index.html  install.sh  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
crates/kustom-formula/: Cargo.toml
crates/kustom-formula/src/: evaluator.rs  lib.rs  parser.rs  value.rs
crates/kustom-formula/src/functions/: color.rs  date.rs  logic.rs  math.rs  mod.rs  shell.rs  text.rs  variables.rs  web.rs
crates/lava-core/: Cargo.toml
crates/lava-core/src/: apps.rs  audio.rs  lib.rs  pid.rs  server.rs  settings.rs
crates/lava-core/src/plugins/: calendar_ics.rs  calendar_sqlite.rs  mod.rs
crates/lava-core/src/providers/: ai.rs  air_quality.rs  battery.rs  datetime.rs  hyprland.rs  manager.rs  mod.rs  network.rs  notifications.rs  resource_monitor.rs  weather.rs
crates/wallpaper-layer/: Cargo.toml
crates/wallpaper-layer/src/: main.rs
presets/: Desktop Dashboard.klwp  desktop-dashboard.json
src/: App.svelte  app.css
src-tauri/: Cargo.toml  Desktop Dashboard.klwp  Untitled.klwp  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: klwp_import.rs  lib.rs  main.rs  project.rs  rainmeter_import.rs
src-tauri/src/commands/: apps.rs  formula.rs  mod.rs  palette.rs  project.rs  settings.rs  wallpaper.rs  window.rs
src-tauri/src/plugins/: calendar_ics.rs  mod.rs
src-tauri/src/providers/: ai.rs  audio.rs  hyprland.rs  location.rs  manager.rs  mod.rs  music.rs  radar.rs  resource_monitor.rs  sysinfo_provider.rs  traffic.rs  weather.rs
src/lib/canvas/: CanvasRenderer.svelte  MapOverlay.svelte  StartMenuOverlay.svelte  animationEngine.ts  animationState.ts  audioVisualizer.ts  easing.ts  paintEngine.ts  renderScheduler.ts  renderer.ts
src/lib/data/: brushPresets.ts  fontawesomeIcons.ts  fonts.ts  materialIcons.ts
src/lib/editor/: AnimationPanel.svelte  AppPickerPortal.svelte  BackgroundPanel.svelte  ColorField.svelte  FormulaBar.svelte  FormulaHelper.svelte  FxBuilder.svelte  GlobalsPanel.svelte  IconPicker.svelte  ImageExtractorModal.svelte  LayerTree.svelte  LeftPanel.svelte  PaintToolbar.svelte  PropertyPanel.svelte  SettingsPanel.svelte  ShortcutsPanel.svelte  ThemesPanel.svelte  Toolbar.svelte  WidgetsPanel.svelte
src/lib/fonts/: fontLoader.ts
src/lib/formula/: service.ts
src/lib/icons/: iconifyService.ts
src/lib/stores/: project.svelte.ts  settings.svelte.ts
src/lib/types/: paint.ts  project.ts  settings.ts
