[package]
name = "lava"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
kustom-formula = { path = "../crates/kustom-formula" }
tokio = { version = "1", features = ["time", "sync"] }
nix = { version = "0.29", features = ["fs"] }
chrono = "0.4"
zip = "2"
tauri-plugin-global-shortcut = "2"
dirs = "5"
ureq = { version = "2", features = ["json"] }
base64 = "0.22"
rustfft = "6.2"
rusqlite = { version = "0.31", features = ["bundled"] }
tiny_http = "0.12"
lava-core = { path = "../crates/lava-core" }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "lava_lib"
crate-type = ["lib", "cdylib", "staticlib"]
