[package]
name = "lava"
version = "0.2.4"
edition = "2021"

[features]
default = []
calendar-sqlite = ["rusqlite"]

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
kustom-formula = { path = "../crates/kustom-formula" }
tokio = { version = "1", features = ["time", "sync"] }
nix = { version = "0.29", features = ["fs"] }
chrono = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }
tauri-plugin-global-shortcut = "2"
dirs = "5"
ureq = { version = "2", default-features = false, features = ["json", "tls"] }
base64 = "0.22"
rustfft = "6.2"
rusqlite = { version = "0.31", features = ["bundled"], optional = true }
tiny_http = "0.12"
lava-core = { path = "../crates/lava-core" }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "lava_lib"
crate-type = ["lib", "cdylib", "staticlib"]
