[package]
name = "lava-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
rustfft = "6.2"
dirs = "5"
tiny_http = "0.12"
ureq = { version = "2", features = ["json"] }
base64 = "0.22"
nix = { version = "0.29", features = ["fs"] }
rusqlite = { version = "0.31", features = ["bundled"] }
