[package]
name = "lava-core"
version = "0.2.1"
edition = "2021"

[features]
default = []
calendar-sqlite = ["rusqlite"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
rustfft = "6.2"
dirs = "5"
tiny_http = "0.12"
ureq = { version = "2", default-features = false, features = ["json", "tls"] }
base64 = "0.22"
nix = { version = "0.29", features = ["fs"] }
rusqlite = { version = "0.31", features = ["bundled"], optional = true }
