[package]
name = "lava-wallpaper"
version = "0.2.1"
edition = "2021"

[[bin]]
name = "lava-wallpaper"
path = "src/main.rs"

[dependencies]
gtk = "0.18"
gtk-layer-shell = { version = "0.8", features = ["v0_6"] }
webkit2gtk = { version = "2.0", features = ["v2_22"] }
javascriptcore-rs = "1.1"
lava-core = { path = "../lava-core" }
serde_json = "1"
